tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/empty-ads.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [],
    ],
];
